# babnote_backend

./: Cargo.toml  README.md
src/: controllers.rs  main.rs
src/controllers/: auth.rs  auth_controller.rs  note.rs  note_controller.rs  structs.rs
src/crypt/: password.rs  token.rs
src/managers/: tokendb.rs  user_manager.rs  userdb.rs
user_name/: babnote.sqlite
