[package]
name = "babnote_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["multipart", "macros"] }
bcrypt = "0.16.0"
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql"] }
tokio = { version="1.43.0", features = ["full", "io-util"] }
tracing-subscriber = "0.3.19"
